[tool.poetry]
name = "optitest"
version = "0.1.0"
description = "Definitions of test functions for optimization."
authors = ["mismorgano <mismorgano@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
numpy = "^1.26.4"
sympy = "^1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
